--- a/iasa/_includes/header.html
+++ b/iasa/_includes/header.html
@@ -1,21 +1,12 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
+<meta name="description" content="{{ page.description }}">
 <meta name="author" content="Eric Willis">
 
-<title>
-  {% if page.layout == "home" %}
-    {{ page.title }}
-  {% else %}
-    {{ page.title }} &middot; Bootstrap
-  {% endif %}
-</title>
+<title>{{ page.title }}</title>
 
-<!-- Bootstrap core CSS -->
 <link href="{{ site.baseurl }}/dist/css/bootstrap.css" rel="stylesheet">
-
-<link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 
 <!-- Favicons -->
 <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
