--- a/iasa/_includes/header.html
+++ b/iasa/_includes/header.html
@@ -6,6 +6,10 @@
 
 <title>{{ page.title }}</title>
 
+<!-- Fonts -->
+<script src="https://use.typekit.net/hjr6ssi.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
 <link href="{{ site.baseurl }}/dist/css/bootstrap.css" rel="stylesheet">
 <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
 
