--- a/iasa/_includes/footer.html
+++ b/iasa/_includes/footer.html
@@ -1,13 +1,32 @@
-<footer class="bd-footer text-muted">
+<footer>
   <div class="container">
-    <ul class="bd-footer-links">
-      <li><a href="{{ site.repo }}">GitHub</a></li>
-      <li><a href="https://twitter.com/getbootstrap">Twitter</a></li>
-      <li><a href="{{ site.baseurl }}/examples/">Examples</a></li>
-      <li><a href="{{ site.baseurl }}/about/history/">About</a></li>
-    </ul>
-    <p>Designed and built with all the love in the world by <a href="https://twitter.com/mdo" target="_blank">@mdo</a> and <a href="https://twitter.com/fat" target="_blank">@fat</a>. Maintained by the <a href="https://github.com/orgs/twbs/people">core team</a> with the help of <a href="https://github.com/twbs/bootstrap/graphs/contributors">our contributors</a>.</p>
-    <p>Currently v{{ site.current_version }}. Code licensed <a rel="license" href="https://github.com/twbs/bootstrap/blob/master/LICENSE" target="_blank">MIT</a>, docs <a rel="license" href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.</p>
+    <div class="row">
+
+      <div class="col-sm-4">
+        <h2>IASA Group LLC</h2>
+        <p>1905 Production Road</br>
+          Fort Wayne, Indiana 46808
+        </p>
+      </div>
+      <div class="col-sm-4">
+        <div class="row">
+          <div class="col-xs">
+            <h4>Cage Code</h4>
+            <h2>7BM02</h2>
+          </div>
+          <div class="col-xs">
+            <h4>DUNS #:</h4>
+            <h2>96-754-5849</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <h4>Phone</h4>
+        <h2><a href="tel:260-481-1322">(260)481-1322</a></h2>
+        <h4>Fax</h4>
+        <h2>260-575-4700</h2>
+      </div>
+    </div>
   </div>
 </footer>
 
