--- a/iasa/_includes/footer.html
+++ b/iasa/_includes/footer.html
@@ -1,34 +1,34 @@
-<footer>
+<footer class="iasa-footer">
   <div class="container">
-    <div class="row">
+    <div class="row ">
 
-      <div class="col-sm-4">
+      <div class="col-md-4">
         <h2>IASA Group LLC</h2>
         <p>1905 Production Road</br>
           Fort Wayne, Indiana 46808
         </p>
       </div>
-      <div class="col-sm-4">
+      <div class="col-md-4">
         <div class="row">
-          <div class="col-xs">
-            <h4>Cage Code</h4>
+          <div class="col-xs-12 col-lg">
+            <h6>Cage Code</h6>
             <h2>7BM02</h2>
           </div>
-          <div class="col-xs">
-            <h4>DUNS #:</h4>
+          <div class="col-xs-12 col-lg">
+            <h6>DUNS #:</h6>
             <h2>96-754-5849</h2>
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
-        <h4>Phone</h4>
+      <div class="col-md-4">
+        <h6>Phone</h6>
         <h2><a href="tel:260-481-1322">(260)481-1322</a></h2>
-        <h4>Fax</h4>
+        <h6>Fax</h6>
         <h2>260-575-4700</h2>
       </div>
     </div>
   </div>
 </footer>
 
-<script src="{{ site.cdn.jquery }}" integrity="{{ site.cdn.jquery_hash }}" crossorigin="anonymous"></script>
+<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 <script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script>
