--- a/iasa/_includes/nav-home.html
+++ b/iasa/_includes/nav-home.html
@@ -2,19 +2,22 @@
   <div class="container">
     <a class="navbar-brand" href="#"><img alt="Brand" src="{{ site.baseurl }}/assets/img/logo.png"></a>
 
-    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
       &#9776;
     </button>
-    <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-      <ul class="nav navbar-nav pull-sm-right">
+    <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar2">
+      <ul class="nav navbar-nav pull-md-right main-nav">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">RFQ Form</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Commercial</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Militray</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
