--- a/iasa/_includes/nav-home.html
+++ b/iasa/_includes/nav-home.html
@@ -8,22 +8,22 @@
     <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar2">
       <ul class="nav navbar-nav pull-md-right main-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">RFQ Form</a>
+          <a class="nav-link" href="/rfq">RFQ Form</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Commercial</a>
+          <a class="nav-link" href="/commercial">Commercial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Militray</a>
+          <a class="nav-link" href="/military">Militray</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-primary" href="#" role="button">Contact</a>
+          <a class="btn btn-outline-primary" href="/contact" role="button">Contact</a>
         </li>
       </ul>
     </div>
