--- a/iasa/_includes/nav-home.html
+++ b/iasa/_includes/nav-home.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-faded">
   <div class="container">
-    <a class="navbar-brand" href="#"><img alt="Brand" src="{{ site.baseurl }}/assets/img/logo.png"></a>
+    <a class="navbar-brand" href="{{ site.staticurl }}/"><img alt="Brand" src="{{ site.baseurl }}/assets/img/logo.png"></a>
 
     <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
       &#9776;
@@ -8,7 +8,7 @@
     <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar2">
       <ul class="nav navbar-nav pull-md-right main-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{{ site.staticurl }}/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/rfq">RFQ Form</a>
