--- a/iasa/_layouts/default.html
+++ b/iasa/_layouts/default.html
@@ -3,12 +3,23 @@
   <head>
     {% include header.html %}
   </head>
-  <body class="{{ page.class }}">
+  <body>
 
     {% include nav-home.html %}
 
-    <div id="content">
+    <div id="{{ page.class }}-content">
         {{ content }}
+    </div>
+
+    <div class="container footer-cta text-center">
+      <div class="row">
+        <div class="col-sm-8 offset-sm-2 text-xs-center">
+          <h1>We Can Help</h1>
+          <p>Looking for engineered supply chain services for your operation? Let IASA Group focus on your parts and logistics needs freeing you and your team to focus on mission readiness and flight ops!</p>
+          <a href="/contact" class="button footer-cta-button">Contact</a>
+        </div>
+      </div>
+
     </div>
 
     {% include footer.html %}
