--- a/iasa/_includes/nav-home.html
+++ b/iasa/_includes/nav-home.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="/commercial">Commercial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/military">Militray</a>
+          <a class="nav-link" href="/military">Military</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
