--- a/iasa/_layouts/default.html
+++ b/iasa/_layouts/default.html
@@ -11,15 +11,16 @@
         {{ content }}
     </div>
 
-    <div class="container footer-cta text-center">
-      <div class="row">
-        <div class="col-sm-8 offset-sm-2 text-xs-center">
-          <h1>We Can Help</h1>
-          <p>Looking for engineered supply chain services for your operation? Let IASA Group focus on your parts and logistics needs freeing you and your team to focus on mission readiness and flight ops!</p>
-          <a href="/contact" class="button footer-cta-button">Contact</a>
+    <div class=" footer-cta text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 offset-sm-3 text-xs-center p-t-3 p-b-3">
+            <h1>We Can Help</h1>
+            <p>Looking for engineered supply chain services for your operation? Let IASA Group focus on your parts and logistics needs freeing you and your team to focus on mission readiness and flight ops!</p>
+            <a href="/contact" class="btn btn-info footer-cta-button d-block">Contact</a>
+          </div>
         </div>
       </div>
-
     </div>
 
     {% include footer.html %}
