--- a/scss/_iasa-pages.scss
+++ b/scss/_iasa-pages.scss
@@ -1,3 +1,7 @@
+section {
+  margin: 30px 0;
+}
+
 .title {
   padding: 40px 30px;
   background-size: cover;
@@ -17,11 +21,74 @@
     background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url("../../../assets/img/iasa-7.jpg ");
     background-position: 50% 50%;
   }
+  &.title-military {
+    background-image: url('../../../assets/img/iasa-6.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url("../../../assets/img/iasa-6.jpg ");
+    background-position: 50% 50%;
+  }
 }
 
 .bg-inverse  {
 
   p, h2 {
     color: white;
+  }
+}
+
+.footer-cta {
+  background-image: url('../../../assets/img/iasa-1.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url("../../../assets/img/iasa-1.jpg ");
+  background-position: 50% 50%;
+  background-size: cover;
+  color: white;
+
+}
+
+
+
+
+
+
+
+
+
+
+// ABOUT Page
+
+
+
+
+
+
+
+
+
+.cert-tag {
+  line-height: 1em;
+  margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+// RFQ form-icon-danger
+
+
+
+
+
+
+
+
+
+#state {
+  @media screen and (max-width: 544px){
+    margin-top: 16px;
   }
 }
