--- a/iasa/_includes/footer.html
+++ b/iasa/_includes/footer.html
@@ -30,5 +30,5 @@
   </div>
 </footer>
 
-<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 <script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script>
+<script src="{{ site.baseurl }}/dist/js/parsley.js"></script>
