--- a/iasa/_includes/header.html
+++ b/iasa/_includes/header.html
@@ -13,6 +13,8 @@
 <link href="{{ site.baseurl }}/dist/css/bootstrap.css" rel="stylesheet">
 <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
 
+<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
