--- a/iasa/_includes/nav-home.html
+++ b/iasa/_includes/nav-home.html
@@ -7,20 +7,20 @@
     </button>
     <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar2">
       <ul class="nav navbar-nav pull-md-right main-nav">
-        <li class="nav-item active">
+        <li class="nav-item {% if page.url == '/' %}active{% endif %}">
           <a class="nav-link" href="{{ site.staticurl }}/">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {% if page.url == '/rfq/' %}active{% endif %}">
           <a class="nav-link" href="/rfq">RFQ Form</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/commercial">Commercial</a>
+          <a class="nav-link {% if page.url == '/commercial/' %}active{% endif %}" href="/commercial">Commercial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/military">Military</a>
+          <a class="nav-link {% if page.url == '/military/' %}active{% endif %}" href="/military">Military</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link {% if page.url == '/about/' %}active{% endif %}" href="/about">About</a>
         </li>
         <li class="nav-item">
           <a class="btn btn-outline-primary" href="/contact" role="button">Contact</a>
