--- a/iasa/_layouts/form.html
+++ b/iasa/_layouts/form.html
@@ -7,9 +7,29 @@
 
     {% include nav-home.html %}
 
-    <div id="{{ page.class }}-content">
-        {{ content }}
+    <div class="title title-commercial">
+      <div class="container">
+        <h2>About</h2>
+      </div>
     </div>
+    <section>
+      <div class="container p-t-3 p-b-3">
+        <div class="row">
+          <div class="col-sm-8">
+              {{ content }}
+          </div>
+          <div class="col-sm-4">
+            <h3>IASA Group LLC</h3>
+            <p>1905 Production Road <br>
+              Fort Wayne <br>
+              Indiana, 46808 USA
+            </p>
+            <p><strong>Tel:</strong> (260)-481-1322</p>
+            <p><strong>Fax:</strong> (260)-575-4700</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     {% include footer.html %}
   </body>
