--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -13,7 +13,11 @@ h1, h2, h3, h4, h5, h6,
 
 h1, .h1 { font-size: $font-size-h1; }
 h2, .h2 { font-size: $font-size-h2; }
-h3, .h3 { font-size: $font-size-h3; }
+h3, .h3 {
+  font-size: $font-size-h3;
+  font-weight: 900;
+  padding-bottom: 1em;
+}
 h4, .h4 { font-size: $font-size-h4; }
 h5, .h5 { font-size: $font-size-h5; }
 h6, .h6 {
