--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -130,6 +130,8 @@
     display: block;
     padding-top:    .425rem;
     padding-bottom: .425rem;
+    font-weight: 700;
+    text-transform: uppercase;
 
     + .nav-link {
       margin-left: 1rem;
