--- a/iasa/_layouts/form.html
+++ b/iasa/_layouts/form.html
@@ -7,18 +7,18 @@
 
     {% include nav-home.html %}
 
-    <div class="title title-commercial">
+    <div class="title title-contact">
       <div class="container">
-        <h2>About</h2>
+        <h2>{{ page.title }}</h2>
       </div>
     </div>
-    <section>
+    <section class="iasa-form">
       <div class="container p-t-3 p-b-3">
-        <div class="row">
-          <div class="col-sm-8">
+        <div class="row contact-wrap">
+          <div class="col-md-8 col-xl-10">
               {{ content }}
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-xl-2 iasa-contact-info">
             <h3>IASA Group LLC</h3>
             <p>1905 Production Road <br>
               Fort Wayne <br>
