--- a/scss/_iasa-custom.scss
+++ b/scss/_iasa-custom.scss
@@ -6,7 +6,7 @@
   padding: 0 20px;
 
   @media screen and (max-width: 992px){
-    padding: 0 10px;
+    padding: 0 5px;
   }
 }
 
@@ -19,7 +19,20 @@
   }
 }
 
+.navbar-nav .active .nav-link::before, .navbar-nav .nav-item:hover .nav-link::before {
 
+  @media screen and (min-width: 992px){
+    content: '';
+    width: 24px;
+    height: 16px;
+    background-image: url('../../../assets/img/icons/icon-jet.png');
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    left: -24px;
+  }
+
+}
 
 
 
@@ -39,6 +52,7 @@
 
 
 .iasa-footer {
+  
   background-color: black;
   color: white;
   padding: 20px;
