--- a/scss/_iasa-pages.scss
+++ b/scss/_iasa-pages.scss
@@ -2,6 +2,33 @@
 //   margin: 30px 0;
 // }
 
+
+.index-banner {
+  padding: 90px 0;
+  background-image: url('../../../assets/img/iasa-banner.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url("../../../assets/img/iasa-banner.jpg ");
+  background-position: 50% 60%;
+
+  h1,p {
+    color: white;
+    text-align: center;
+    text-shadow: 2px 2px black;
+
+  }
+  h1 {
+    font-weight: 700;
+    font-style: italic;
+  }
+
+  p {
+    font-size: 18px;
+  }
+
+  @media screen and (max-width: 544px){
+    padding: 30px 0;
+  }
+
+}
 .title {
   padding: 40px 30px;
   background-size: cover;
@@ -12,6 +39,8 @@
     font-family: $font-family-base;
     text-transform: uppercase;
     font-style: italic;
+    font-weight: 700;
+    text-shadow:2px 2px black ;
   }
 
 
@@ -26,12 +55,23 @@
     background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url("../../../assets/img/iasa-6.jpg ");
     background-position: 50% 50%;
   }
+  &.title-contact {
+    background-image: url('../../../assets/img/iasa-5.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url("../../../assets/img/iasa-5.jpg ");
+    background-position: 50% 50%;
+  }
+  &.title-about {
+    background-image: url('../../../assets/img/iasa-4.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url("../../../assets/img/iasa-4.jpg ");
+    background-position: 50% 15%;
+  }
 }
 
 .bg-inverse  {
 
   p, h3 {
     color: white;
+
   }
 }
 
@@ -41,6 +81,8 @@
   background-position: 50% 50%;
   background-size: cover;
   color: white;
+  text-shadow: 2px 2px black;
+
 
 }
 
@@ -77,9 +119,38 @@
 
 
 
-// RFQ form-icon-danger
+// Contact Forms
+.iasa-form {
+  background-color: #FAFAFA;
+  min-height: 70vh;
+
+  @media screen and (max-width: 786px){
+    padding:0 15px;
+  }
+}
+.contact-wrap {
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  padding: 60px 30px;
+  @media screen and (max-width: 786px){
+    padding:60px 15px;
+  }
+}
+
+.iasa-contact-info{
 
 
+  @media screen and (max-width: 768px){
+    margin-top: 16px;
+  }
+}
+.address-col{
+
+  input {
+    margin-bottom: 1rem;
+  }
+}
 
 
 
@@ -143,5 +214,6 @@
   }
   p {
     color: white;
+    text-shadow: 2px 2px black;
   }
 }
