--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -48,12 +48,12 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             orange !default;
+$brand-primary:             #1E88E5 !default;
 $brand-success:             #5cb85c !default;
 $brand-info:                #5bc0de !default;
 $brand-warning:             #f0ad4e !default;
 $brand-danger:              #d9534f !default;
-$brand-inverse:             $gray-dark !default;
+$brand-inverse:             black !default;
 
 
 // Options
